--- a/public/static/css/cornellforum.css
+++ b/public/static/css/cornellforum.css
@@ -51,8 +51,9 @@ div.navbar li:hover {
 }
 
 a.navbar-brand {
-	font-family: 'Lobster Two';
+	font-family: 'Lobster';
 	font-size: 35px;
+	text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 li.logged-in a i {
