--- a/public/static/css/cornellforum.css
+++ b/public/static/css/cornellforum.css
@@ -56,6 +56,13 @@ a.navbar-brand {
 	text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
+i.cornellforum-logo {
+	font-size: 90%;
+	position: relative;
+	top: -3px;
+	color: rgba(255, 255, 255, 0.5);
+}
+
 li.logged-in a i {
 	color: #d4c784;
 }
@@ -156,12 +163,12 @@ div#new-comment-form {
 }
 
 div.formatting-buttons {
-	height: 30px;
-	margin: 0 0 25px 0;
+	height: 35px;
+	margin: 10px 0 15px 0;
 }
 
 div.formatting-buttons ul {
-	height: 30px;
+	height: 35px;
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
@@ -169,16 +176,17 @@ div.formatting-buttons ul {
 
 div.formatting-buttons ul li {
 	display: inline-block;
-	margin: 0 15px 0 0;
-	line-height: 29px;
-	height: 30px;
-	width: 30px;
+	margin: 0 15px 15px 0;
+	line-height: 34px;
+	height: 35px;
+	width: 35px;
 	padding: 0;
 	cursor: pointer;
 	text-align: center;
 	text-decoration: none;
-	outline: 1px dotted #ccc;
-	background: rgba(0, 0, 0, 0.02);
+	background: rgba(0, 0, 0, 0.05);
+	font-size: 16px;
+	border-radius: 5px;
 }
 
 div.formatting-buttons ul li:active {
