formatting buttons overlay

--- a/public/static/css/cornellforum.css
+++ b/public/static/css/cornellforum.css
@@ -162,9 +162,19 @@ div#new-comment-form {
 	margin: 15px 0;
 }
 
+div.outer-textarea-container {
+	position: relative;
+}
+
 div.formatting-buttons {
-	height: 35px;
-	margin: 10px 0 15px 0;
+	position: absolute;
+	width: 25px !important;
+	top: 15px;
+	right: 40px;
+}
+
+textarea.with-formatting-buttons {
+	padding-right: 65px;
 }
 
 div.formatting-buttons ul {
@@ -184,9 +194,13 @@ div.formatting-buttons ul li {
 	cursor: pointer;
 	text-align: center;
 	text-decoration: none;
-	background: rgba(0, 0, 0, 0.05);
+	background: rgba(0, 0, 0, 0.03);
 	font-size: 16px;
 	border-radius: 5px;
+}
+
+div.formatting-buttons ul li:hover {
+	background: rgba(0, 0, 0, 0.1);
 }
 
 div.formatting-buttons ul li:active {
