--- a/public/static/css/cornellforum.css
+++ b/public/static/css/cornellforum.css
@@ -159,7 +159,7 @@ p.comment-time {
 }
 
 div#new-comment-form {
-	margin: 15px 0;
+	margin: 0;
 }
 
 div.outer-textarea-container {
@@ -178,7 +178,7 @@ textarea.with-formatting-buttons {
 }
 
 div.formatting-buttons ul {
-	height: 35px;
+	height: 32px;
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
@@ -187,9 +187,9 @@ div.formatting-buttons ul {
 div.formatting-buttons ul li {
 	display: inline-block;
 	margin: 0 0 5px 0;
-	line-height: 34px;
-	height: 35px;
-	width: 35px;
+	line-height: 31px;
+	height: 32px;
+	width: 32px;
 	padding: 0;
 	cursor: pointer;
 	text-align: center;
