--- a/public/static/css/cornellforum.css
+++ b/public/static/css/cornellforum.css
@@ -137,8 +137,16 @@ h4.thread-subtitle {
 	margin: 0;
 }
 
-p.thread-body {
+p.post-body {
 	margin: 15px 0;
+}
+
+p.post-body img {
+	max-width: 600px;
+	max-height: 600px;
+	padding: 8px;
+	background: rgba(0, 0, 0, 0.05);
+	border-radius: 5px;
 }
 
 div.comment {
