--- a/public/static/css/cornellforum.css
+++ b/public/static/css/cornellforum.css
@@ -101,8 +101,8 @@ p.thread-index-subtitle {
 }
 
 div#thread-intro {
-	padding: 0 0 25px 0;
-	margin: 0 0 25px 0;
+	padding: 0;
+	margin: 0 0 20px 0;
 	border-bottom: 1px dotted #ccc;
 
 }
