--- a/public/static/css/cornellforum.css
+++ b/public/static/css/cornellforum.css
@@ -109,7 +109,7 @@ div#thread-intro {
 
 div#comments {
 	margin: 0 0 25px 0;
-	padding: 0;
+	padding: 0 0 5px 0;
 	border-bottom: 1px dotted #ccc;
 }
 
