sticky footer bug fix for small screens

--- a/public/static/css/cornellforum.css
+++ b/public/static/css/cornellforum.css
@@ -298,3 +298,9 @@ body {
 	margin: 0;
 	line-height: 50px;
 }
+
+@media only screen and (max-device-width: 480px) {
+    #footer {
+        height: auto;
+    }
+}
