--- a/public/static/css/cornellforum.css
+++ b/public/static/css/cornellforum.css
@@ -271,6 +271,10 @@ span.new-thread-notification, span.new-comment-notification {
 	margin: 0 0 0 5px;
 }
 
+a.delete-comment-button {
+	margin: 0 0 0 5px;
+}
+
 /* sticky footer */
 html,
 body {
