--- a/public/static/css/cornellforum.css
+++ b/public/static/css/cornellforum.css
@@ -190,9 +190,23 @@ p.comment-body {
 }
 
 p.comment-time {
+	display: inline-block;
 	color: #999;
-	margin: 0;
+	margin: 0 10px 0 0;
 	font-size: 14px;
+}
+
+div.comment-actions {
+	display: inline-block;
+	position: relative;
+	color: #999;
+	font-size: 13px;
+}
+
+div.comment-actions a, div.comment-actions span {
+	color: #999 !important;
+	cursor: pointer;
+	margin: 0 10px 0 0;
 }
 
 div#new-comment-form {
@@ -271,9 +285,7 @@ span.new-thread-notification, span.new-comment-notification {
 	margin: 0 0 0 5px;
 }
 
-a.delete-comment-button {
-	margin: 0 0 0 5px;
-}
+
 
 /* sticky footer */
 html,
