--- a/public/static/css/cornellforum.css
+++ b/public/static/css/cornellforum.css
@@ -192,21 +192,32 @@ p.comment-body {
 p.comment-time {
 	display: inline-block;
 	color: #999;
-	margin: 0 10px 0 0;
+	margin: 0;
 	font-size: 14px;
 }
 
 div.comment-actions {
 	display: inline-block;
-	position: relative;
-	color: #999;
 	font-size: 13px;
 }
 
-div.comment-actions a, div.comment-actions span {
+div.thread-secondary-actions {
+	color: #777;
+	margin: 0 0 15px 0;
+}
+
+span.quote-this-thread {
 	color: #999 !important;
+}
+
+div.comment-actions > .comment-action {
+	color: #bbb !important;
 	cursor: pointer;
-	margin: 0 10px 0 0;
+	margin: 0 0 0 10px;
+}
+
+div.comment-actions a:hover, div.comment-actions span:hover {
+	color: #999 !important;
 }
 
 div#new-comment-form {
