fix comments padding

--- a/public/static/css/cornellforum.css
+++ b/public/static/css/cornellforum.css
@@ -93,7 +93,7 @@ p.thread-index-subtitle {
 
 div#thread-intro {
 	padding: 0;
-	margin: 0 0 5px 0;
+	margin: 0 0 15px 0;
 	border-bottom: 1px dotted #ccc;
 
 }
@@ -163,6 +163,10 @@ div.comment {
 	padding: 10px 0;
 	margin: 0;
 	word-wrap: break-word;
+}
+
+div.comment:first-child {
+	padding: 0 0 10px 0;
 }
 
 p.comment-time {
