--- a/public/static/css/cornellforum.css
+++ b/public/static/css/cornellforum.css
@@ -160,7 +160,7 @@ div.post-body blockquote {
 	margin: 0;
 	padding: 10px 15px;
 	background: rgba(255, 255, 255, 0.8);
-	border-left: 5px solid #69a3d5;
+	border-left: 5px solid #91bbe0;
 }
 
 div.comment {
