--- a/public/static/css/cornellforum.css
+++ b/public/static/css/cornellforum.css
@@ -171,7 +171,7 @@ div.post-body blockquote {
 div.comment {
 	display: inline-block;
 	position:relative;
-	margin: 0 0 25px 0;
+	padding: 10px 0;
 	word-wrap: break-word;
 }
 
@@ -200,7 +200,6 @@ p.comment-time {
 
 div.comment-actions {
 	display: inline-block;
-	font-size: 13px;
 }
 
 div.comment-actions > .comment-action {
