#thread-intro to .thread-intro

--- a/public/static/css/cornellforum.css
+++ b/public/static/css/cornellforum.css
@@ -95,7 +95,7 @@ p.thread-index-subtitle {
 	color: #999;
 }
 
-div#thread-intro {
+div.thread-intro {
 	padding: 0;
 	margin: 0;
 	border-bottom: 1px dotted #ccc;
