--- a/public/static/css/cornellforum.css
+++ b/public/static/css/cornellforum.css
@@ -312,6 +312,18 @@ span.new-thread-notification, span.new-comment-notification {
 	margin: 0 0 0 5px;
 }
 
+/* tweak the way bootstrap looks for inputs */
+.form-control:focus{
+    border-color: #ccc;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+.form-control {
+	border-radius: 3px;
+	padding: 10px 15px;
+}
+
 /* sticky footer */
 html,
 body {
